<resources>
    <string name="app_name">My Application</string>
    <string name="hint">number of cells</string>
    <string name="width_string">Width:</string>
    <string name="height_string">Height:</string>
    <string name="create_grid_string">Create grid</string>
    <string-array name="heuristics">
        <item>Manhattan Distance</item>
        <item>Diagonal Distance</item>
        <item>Euclidean Distance</item>
    </string-array>
    <string-array name="proportions">
        <item>50%</item>
        <item>75%</item>
        <item>100%</item>
        <item>125%</item>
        <item>150%</item>
        <item>200%</item>
        <item>300%</item>
        <item>400%</item>
        <item>500%</item>
        <item>750%</item>
        <item>1000%</item>
    </string-array>
    <string-array name="scales">
        <item>x0.5</item>
        <item>x2</item>
        <item>x3</item>
    </string-array>
    <string name="movement_option1">Movement in 4 directions</string>
    <string name="movement_option2">Movement in 8 directions</string>
    <string name="movement_option3">Movement in 8 directions if a corner isn\'t blocked</string>
    <string name="run_string">Run</string>
    <string name="clear_path_string">Clear path</string>
    <string name="clear_grid_string">Clear grid</string>
<<<<<<< HEAD
    <string name="enlarge_string">Enlarge</string>
=======
    <string name="rotate_string">Rotate</string>
>>>>>>> 6c1f321 (Nrls 8: more activities and transitions)
    <string name="scale_string">Scale</string>
    <string name="save_string">Save</string>
    <string name="algorithms_string">Algorithms</string>
    <string name="blur_string">Blur</string>
    <string name="unsharp_mask_string">Unsharp Mask</string>
    <string name="clear_string">Clear</string>
    <string name="chain_string">Chain</string>
    <string name="a_star_string">A*</string>
    <string name="interpolation_string">interpolation</string>
<<<<<<< HEAD
=======
    <string name="zoom_string">Zoom</string>
    <string name="tools_string">Tools</string>
    <string name="negative_string">Negative</string>
    <string name="monochrome_string">Monochrome</string>
    <string name="red_string">Red</string>
    <string name="back_string">Back</string>
    <string name="return_string">Return</string>
<<<<<<< HEAD
>>>>>>> 6c1f321 (Nrls 8: more activities and transitions)
=======
    <string name="error_string">Error</string>
>>>>>>> f9f7205 (Fix 7: rotation works, warnings are gone (except of one lil piece of trash))
</resources>
