<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AStarGridActivity">

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            android:id="@+id/verticalScrolling"
            app:layout_constraintBottom_toTopOf="@+id/guideline5" android:scrollbars="none">
        <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:scrollbars="none" android:id="@+id/horizontalScrolling">
            <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/gridTable" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
            />
        </HorizontalScrollView>
    </ScrollView>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline5"
            app:layout_constraintGuide_percent="0.6"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/heuristicSpinner"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:entries="@array/heuristics"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline5" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline6"
            app:layout_constraintGuide_percent="0.65"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline6" android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline7" android:id="@+id/movementOptions">
        <RadioButton
                android:text="@string/movement_option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/movementOption1" android:layout_weight="1"
                android:checked="true"/>
        <RadioButton
                android:text="@string/movement_option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/movementOption2" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/movement_option3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/movementOption3" android:layout_weight="1"/>
    </RadioGroup>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline7"
            app:layout_constraintGuide_percent="0.85"/>
    <Button
            android:text="@string/clear_path_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clearPathButton"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline7" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toStartOf="@+id/runAStarButton" android:background="#ECC9C9"
            android:onClick="launchClearPath"/>
    <Button
            android:text="@string/run_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/runAStarButton"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline7" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:onClick="runAStar"
            app:layout_constraintEnd_toEndOf="parent" android:background="#C1F4B6"/>
    <Button
            android:text="@string/clear_grid_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clearGridButton" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toEndOf="@+id/runAStarButton"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline7" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="#ECC9C9" android:onClick="launchClearGrid"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline8" app:layout_constraintGuide_percent="0.5"/>
</android.support.constraint.ConstraintLayout>