<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/colorPrimary"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AStarMainActivity" tools:ignore="ExtraText">
    <TextView
            android:text="@string/height_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/heightText" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline1" android:textSize="36sp"/>
    <EditText
            android:importantForAutofill="no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/heightInput" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline5" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/heightText" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:autofillHints=""
            android:singleLine="true" android:hint="@string/hint" tools:targetApi="o"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline1" app:layout_constraintGuide_percent="0.25"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline5"
            app:layout_constraintGuide_percent="0.3"/>
    <TextView
            android:text="@string/width_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/widthText" android:textSize="36sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline5" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"/>
    <EditText
            android:importantForAutofill="no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/widthInput"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/widthText" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline4" tools:targetApi="o" android:hint="@string/hint"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline3"
            app:layout_constraintGuide_percent="0.55"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline4"
            app:layout_constraintGuide_percent="0.6"/>
    <Button
            android:text="@string/create_grid_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/black_button"
            android:id="@+id/createGridButton"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:onClick="transitToGrid"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline4"
    />
</android.support.constraint.ConstraintLayout>