<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InterpolationActivity" android:background="@color/colorPrimary" android:id="@+id/constraintLayout">

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline" app:layout_constraintGuide_percent="0.8"
    />
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline2" app:layout_constraintGuide_percent="0.5"/>
    <Button
            android:text="@string/interpolation_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/black_button"
            android:id="@+id/chainButton" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:onClick="interpolation" app:layout_constraintEnd_toEndOf="parent"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    <Button
            android:text="@string/clear_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/black_button"
            android:id="@+id/interpolationButton" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:onClick="clear"
            app:layout_constraintStart_toEndOf="@+id/chainButton" android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:id="@+id/drawView" app:layout_constraintHorizontal_bias="0.917"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline">
    </LinearLayout>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/black_button"
            android:id="@+id/blurButton" app:layout_constraintEnd_toStartOf="@+id/chainButton"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:text="@string/chain_string"
            android:onClick="createChain"/>
</android.support.constraint.ConstraintLayout>